--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jpa.properties.hibernate.format_sql=true
