Fixed the CORS problem by adding cors method to securityconfiguration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,15 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.format_sql=true
+# Enable CORS
+spring.mvc.cors.enabled=true
+
+# Allow requests from all domains
+spring.mvc.cors.allowed-origins=*
+
+# Allow all methods
+spring.mvc.cors.allowed-methods=*
+
+# Allow all headers
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
