The job post now works and posts correct employer id.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,14 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type=error
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.com.fasterxml.jackson.databind = off
+
+
 # Enable CORS
 spring.mvc.cors.enabled=true
 
