Mod User so that it no longer cont jobs property, added jsonignore property to user prop of Token class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,11 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
-logging.level.org.hibernate.SQL=error
-logging.level.org.hibernate.type=error
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.com.fasterxml.jackson.databind = off
-
+spring.http.converters.preferred-json-mapper=jackson
+spring.jackson.default-property-inclusion=NON_NULL
 
 # Enable CORS
 spring.mvc.cors.enabled=true
@@ -23,3 +21,14 @@ spring.mvc.cors.allowed-methods=*
 # Allow all headers
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
+
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type=error
+
+logging.level.org.springframework.web=error
+
+logging.level.root=error
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
