--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jobsearch?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.http.converters.preferred-json-mapper=jackson
+spring.mvc.converters.preferred-json-mapper=jackson
 spring.jackson.default-property-inclusion=NON_NULL
-
-# Enable CORS
-spring.mvc.cors.enabled=true
-
-# Allow requests from all domains
-spring.mvc.cors.allowed-origins=*
-
-# Allow all methods
-spring.mvc.cors.allowed-methods=*
-
-# Allow all headers
-spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
-
 logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type=error
-
 logging.level.org.springframework.web=error
-
 logging.level.root=error
-
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
