--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.converters.preferred-json-mapper=jackson
 spring.jackson.default-property-inclusion=NON_NULL
-logging.level.org.hibernate.SQL=error
-logging.level.org.hibernate.type=error
 logging.level.org.springframework.web=error
 logging.level.root=error
 server.servlet.encoding.charset=UTF-8
