Modified to make compatible with mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.data.mongodb.database=${env.MONGO_DATABASE}
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/socialmedia?authSource=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=socialmedia
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mvc.converters.preferred-json-mapper=jackson
 spring.jackson.default-property-inclusion=NON_NULL
